// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task-decision-2.ts: can edit an action 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "TODO",
          },
          "content": Array [
            Object {
              "text": "a preloaded action has been edited",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
}
`;

exports[`task-decision-2.ts: can insert mention into an action using click 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "TODO",
          },
          "content": Array [
            Object {
              "attrs": Object {
                "accessLevel": "",
                "id": "0",
                "text": "@Carolyn",
                "userType": null,
              },
              "type": "mention",
            },
            Object {
              "text": " ",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
}
`;

exports[`task-decision-2.ts: can paste plain text into an action 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "TODO",
          },
          "content": Array [
            Object {
              "text": "this is a link ",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "__confluenceMetadata": null,
                    "href": "http://www.google.com",
                  },
                  "type": "link",
                },
              ],
              "text": "http://www.google.com",
              "type": "text",
            },
            Object {
              "text": " more elements with some **format** some addition *formatting*",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
}
`;

exports[`task-decision-2.ts: can paste rich text into an action 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
            "state": "TODO",
          },
          "content": Array [
            Object {
              "text": "this is a link ",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "__confluenceMetadata": null,
                    "href": "http://www.google.com",
                  },
                  "type": "link",
                },
              ],
              "text": "www.google.com",
              "type": "text",
            },
            Object {
              "type": "hardBreak",
            },
            Object {
              "text": "more elements with some ",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "type": "strong",
                },
              ],
              "text": "format",
              "type": "text",
            },
            Object {
              "type": "hardBreak",
            },
            Object {
              "text": "some addition",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "type": "em",
                },
              ],
              "text": " formatting",
              "type": "text",
            },
          ],
          "type": "taskItem",
        },
      ],
      "type": "taskList",
    },
  ],
  "type": "doc",
}
`;
